tests/snapshots/integration__help_tag_test__add_help_subcommand.snap
---
source: tests/help_tag_test.rs
assertion_line: 17
expression: output
---
RUN
prog

STDOUT


STDERR
USAGE: prog <COMMAND>

COMMANDS:
  help  Print help information
  cmd


