tests/snapshots/integration__help_tag_test__no_help_subcommand.snap
---
source: tests/help_tag_test.rs
assertion_line: 7
expression: output
---
RUN
prog

STDOUT


STDERR
USAGE: prog <COMMAND>

OPTIONS:
  -h, --help  Print help information

COMMANDS:
  cmd


